--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Open+Sans:ital,wght@0,600;1,300&display=swap');
 @import "reset.css";
+@import "variables.css";
 @import "status-bar.css";
 body{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
@@ -22,4 +23,29 @@ body{
     width:60%;
     opacity: 0.7;
     
+}
+
+#Login-form{
+    display: flex;
+    flex-direction: column;
+    margin: 0px 30px;
+
+}
+
+#Login-form input {
+    padding: 15px 0px;
+    border: none;
+    font-size: 18px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    margin-bottom: 25px;
+    transition: border-color 1s ease-in-out;
+}
+
+#Login-form input::placeholder{
+    color:rgba(0, 0, 0, 0.4)
+}
+
+#Login-form input:focus{
+
+    border-color:var(--yello);
 }
