--- a/css/styles.css
+++ b/css/styles.css
@@ -1,71 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Open+Sans:ital,wght@0,600;1,300&display=swap');
 @import "reset.css";
 @import "variables.css";
-@import "status-bar.css";
+
+
+/* Components */
+@import "components/status-bar.css";
+@import "components/nav-bar.css";
+
+/* Screnns */
+@import "screens/login.css";
 body{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    height:1000vh;
 }
 
-.welcome-header{
-    margin: 90px 0px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.welcome-header__title{
-    margin-bottom: 20px;
-    font-size: 25px;
-}
-
-.welcome-header__text{
-    width:60%;
-    opacity: 0.7;
-    
-}
-
-#Login-form{
-    display: flex;
-    flex-direction: column;
-    margin: 0px 30px;
-
-}
-
-#Login-form input {
-    padding: 15px 0px;
-    border: none;
-    font-size: 18px;
-    
-    margin-bottom: 25px;
-    
-}
-
-#Login-form input:not([type="submit"]){
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    transition: border-color 1s ease-in-out;
-}
-
-#Login-form input::placeholder{
-    color:rgba(0, 0, 0, 0.4)
-}
-
-#Login-form input:focus{
-
-    border-color:var(--yellow);
-}
-
-#Login-form input[type="submit"]{
-    background-color: var(--yellow);
-    cursor:pointer;
-    padding: 20px 0px;
-    border-radius: 5px;
-   
-}
-
-#Login-form a{
- text-align: center;
- text-decoration:none;
- color:inherit;
- font-size: 13px;
-}
