--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -1,22 +1,3 @@
-.find-icons{
-    display: flex;
-    justify-content: space-between;}
-
-.find-icons__icon{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-}
-
-.find-icons__icon I {
-    font-size: 35px;
-}
-
-.find-icons__icon span {
-    margin-top: 15px;
-}
-
 .recommended-friends{
 border-top: var(--main-border);
 border-bottom: var(--main-border);
@@ -121,4 +102,32 @@ color: var(--font-grey);
 
 .open-post__heart-count span{
     margin-left: 5px;
+}
+
+.more-suggestions__icons{
+    display: flex;
+}
+
+.more-suggestions__icon{
+    margin-right: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.more-suggestions__icon-image{
+    width: 60px;
+    height: 60px;
+background-color: var(--yellow);
+border-radius: 15px;
+display: flex;
+justify-content: center;
+align-items: center;
+margin-bottom: 10px;
+}
+
+.more-suggestions__icons i {
+    font-size: 32px;
+    color:white;
+    
 }
