--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -1,4 +1,4 @@
-.alt-haeder{
+.alt-header{
     padding: var(--horizontal-space);
     margin-bottom: 15px;
     display: flex;
@@ -6,6 +6,9 @@
     align-items: center;
 }
 
+.alt-header__column {
+    width: 33%;
+}
 .alt-header__title{
     font-size: 30px;
     font-weight: 600;
@@ -15,6 +18,16 @@
  margin-right: auto;
 }
 
+.alt-header__column:nth-child(2){
+    text-align: center;
+}
 .alt-header__column:last-child{
     margin-left: auto;
+    display: flex;
+    justify-content: flex-end;
+    
+}
+
+.alt-header__column span:last-child {
+    margin-left: 20px;
 }
