--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -23,7 +23,19 @@
     position: absolute;
     left: 10px;
     bottom: 10px;
-    
+    animation: notificationAnimation 3s ease-in-out infinite;
+}
+
+@keyframes notificationAnimation{
+    0%{
+      transform:none ;
+    }
+    50%{
+        transform:translateY(-5px) rotateY(540deg);
+    }
+    100%{
+        transform:none ;
+    }
 }
     .nav__dot {
         background-color: tomato;
@@ -35,4 +47,39 @@
         bottom: 30px;
         }
     
-        
+
+
+
+@keyframes appearBtnAnimation{
+    from{
+        transform: translateY(50px);
+        opacity:0 ;
+
+    }
+    to{
+        transform:none;
+        opacity: 1;
+
+    }
+}
+.nav__btn{
+    animation:appearBtnAnimation 0.5s ease-in-out forwards;
+    transform: translateY(50px);
+    opacity: 0;
+
+}
+
+.nav__btn:nth-child(2) {
+    animation-delay:0.2s ;
+
+}
+
+.nav__btn:nth-child(3) {
+    animation-delay:0.4s ;
+    
+}
+
+.nav__btn:last-child{
+    animation-delay:0.6s ;
+
+}
