--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,6 +1,6 @@
 #chat-screen{
     background-color: #abc1d1;
-    min-height: 11000vh;
+    min-height: 500vh;
 }
 
 #chat-screen .alt-header,
@@ -21,11 +21,30 @@
    z-index: 1;
 }
 
+
+@keyframes fadein {
+    from{
+        transform:translateY(30px);
+        opacity: 0;
+
+    }
+    
+    to{
+        transform: none;
+        opacity: 1;
+
+    }
+}
+
+
+
+
 .main-chat{
-    margin-top: 120px;
+    margin-top: 180px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    animation: fadein .8s linear;
 }
     
 
@@ -38,10 +57,15 @@
     margin-bottom: 25px;
 }
 
+
+
+
+
 .message-row{
     width: 100%;
     display: flex;
     margin-bottom: 25px;
+    
     
 }
 
@@ -105,6 +129,7 @@
     padding: 5px 25px;
     box-sizing: border-box;
     align-items: center;
+    transition: all 0.3s ease-in-out;
 }
 
 
@@ -126,6 +151,7 @@
     width: 100%;
     border: var(--main-border);
     border-radius: 20px;
+    transition: all 0.3s ease-in-out;
 }
 
 .reply input::placeholder {
@@ -160,4 +186,32 @@
 .reply__column button:focus,
 .reply__column button:active{
     outline: none;
+}
+
+
+
+
+.reply .reply__column:first-child,
+.reply .fa-face-smile,
+.reply button {
+    transition: opacity 0.3s ease-in-out;
+}
+
+
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within .fa-face-smile,
+.reply:focus-within button{
+
+    opacity: 0;
+}
+
+.reply:focus-within input{
+    width: 98vw;
+    transform: translateX(-13%) translateY(-80px)
+}
+
+
+
+.reply:focus-within {
+    transform: translateY(80px);
 }
