--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -15,3 +15,23 @@ margin-bottom: 15px;
     margin-left: 25px;
 }
 
+
+@keyframes rotategear{
+    from{
+        transform:none;
+
+    }
+
+    to{
+        transform:rotateZ(360deg)
+
+
+    }
+
+
+}
+
+.screen-header__icons .fa-gear:hover{
+    animation: rotategear 1s linear infinite;
+
+}
