--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -131,3 +131,38 @@ margin-bottom: 10px;
     color:white;
     
 }
+
+
+
+
+@keyframes heartbeat{
+    0%{
+        color:white;
+        transform:none;
+
+    }
+
+    50%{
+        color:tomato;
+        transform: scale(1.5);
+
+    }
+
+    100%{
+        color: white;
+        transform: scale(none);
+
+
+    }
+
+
+}
+
+
+
+
+.open-post__heart-count:hover i {
+    will-change: transform;
+
+    animation: heartbeat 1s linear infinite;
+}
